crates/rolldown/tests/rolldown/errors/export_undefined_variable/main.js
let foo = 1000;
export {
  foo,
  bar
}
